--- a/views/lengthify.haml
+++ b/views/lengthify.haml
@@ -1,6 +1,6 @@
-%h3
+%h1
   Your new url is.....
   %br
-  %span.url
+  .url
     %a{ :href => @base_url + @long_url }
       =@base_url +  @long_url
