--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,18 +8,24 @@ a {
   color: #1f1f1f;
 }
 
-.lengthen-form button {
+.lengthen-form button, .decode-form button {
   background: url('/img/pill.jpg') no-repeat;
   width: 150px;
   height: 84px;
   cursor: pointer;
 }
 
-.lengthen-form input {
+.lengthen-form input, .decode-form input {
   height: 1.5em;
   font-size: 1.5em;
   padding: 5px;
   width: 20em;
+}
+
+.or {
+  height: 2em;
+  font-size: 2em;
+  text-align: center;
 }
 
 #container {
